# dyndns-rs

./: Cargo.toml  Dockerfile
.github/workflows/: ci.yaml
src/: main.rs
