[package]
name = "dyndns-rs"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
aws-config = { version = "1.6" }
aws-sdk-route53 = { version = "1.68" }
tokio = { version = "1.44", features = ["macros", "rt", "rt-multi-thread"] }
